change color test in branch

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<h1 style="color: green">test git</h1>
+<h1 style="color: yellow">test git</h1>
 </body>
 </html>
